--- a/mypage.html
+++ b/mypage.html
@@ -1,1 +1,11 @@
-test fjord
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>"Test Website"</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        
+
+</html>
