--- a/mypage.html
+++ b/mypage.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="container-text-center" id="main-text">
+            <p>
+            Here is an Artin-esque website.
+            </p>
+        </div>
+    </body>
+
         
 
 </html>
